--- a/pages/homeIndex/homeIndex.wxss
+++ b/pages/homeIndex/homeIndex.wxss
@@ -420,7 +420,7 @@ swiper,
 .tab-h {
     transform: translateY(-40rpx);
     padding-left: 30rpx;
-    height: 80rpx;
+    height: 100rpx;
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
@@ -509,6 +509,19 @@ swiper,
     background-color: rgba(249, 249, 249, 1)
 }
 
+.goods .tabs .left{
+    width: 60%;
+    margin-left: 40rpx;
+}
+
+.goods .tabs{
+    background: #ffffff;
+}
+
+.goods .van-dropdown-menu__item {
+    justify-content: flex-start;
+}
+
 .goods image {
     width: 100%;
     height: 100%;
@@ -530,9 +543,12 @@ swiper,
     height: 40rpx;
     float: right;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 70rpx;
     right: 40rpx
+}
+
+.van-dropdown-item {
+    top: 100rpx!important;
 }
 
 .advBox {
