--- a/pages/goodsInfo/goodsInfo.wxml
+++ b/pages/goodsInfo/goodsInfo.wxml
@@ -1,10 +1,13 @@
 <!--pages/goodsInfo/goodsInfo.wxml-->
 <view class="content">
+    <van-loading type="spinner" wx:if="{{loading}}" class="loadingStyle" size="20">正在下载中...</van-loading>
     <view class="infoBox">
-        <view class="type">古筝谱<text> | 发布时间: 2017-10-30</text></view>
+        <!-- <view class="type">{{infoData.typeName}}<text> | 发布时间: {{infoData.gmtCreated}}</text></view> -->
         <view class="name">{{infoData.skuName}}</view>
-        <view class="info">这是副标题这是副标题</view>
-        <view class="flex-center-Y justify-between">
+        <view class="info" wx:if="{{infoData.goodsLabel1}}">{{infoData.goodsLabel1}}</view>
+        <view class="info" wx:if="{{infoData.goodsLabel2}}">{{infoData.goodsLabel2}}</view>
+        <view class="info" wx:if="{{infoData.goodsLabel3}}">{{infoData.goodsLabel3}}</view>
+        <!-- <view class="flex-center-Y justify-between">
             <view class="flex-center-Y justify-between" style="width:100%">
                 <view class="label">
                     <text wx:if="{{infoData.goodsLabel1}}">{{infoData.goodsLabel1}}</text>
@@ -14,12 +17,12 @@
                     <text wx:if="{{infoData.goodsLabel3}}">{{infoData.goodsLabel3}}</text>
                 </view>
             </view>
-        </view>
+        </view> -->
     </view>
 </view>
 <view class="blank"></view>
 <!-- 音频 -->
-<view wx:if="{{audiolist.length > 0 }}">
+<view wx:if="{{audiolist[0].audiosrc > 0 }}">
   <view class='audio'>
     <view class='audio_btn' catchtap='playAudio'>
       <image src='../../images/homeIndex/start.png' class='image-full' wx:if="{{!isPlayAudio}}"></image>
@@ -36,16 +39,16 @@
 <!-- 音频 -->
 <!-- 曲谱图片 -->
 <view class="goodsInfo" style="display: flex; flex-direction: column;">
-    <image wx:for="{{skuLongPictureList}}" wx:key="index" src="{{item.pictureUrl}}" mode="widthFix"></image>
+    <image bindlongpress="saveImg" wx:for="{{skuShowPictureList}}" wx:key="index" src="{{item.pictureUrl}}" data-url="{{item.pictureUrl}}" mode="widthFix"></image>
 </view>
-<view class="fix-bottom flex-center-Y justify-center">
+<view class="fix-bottom flex-center-Y justify-center" wx:if="{{audiolist[0].audiosrc > 0 }}">
     <view wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" class="flex-center-Y">
             <image style="width:40rpx;height:40rpx" src="../../images/shop/downLoad.png"></image>
-            <button class="btn-l">下载</button>
+            <button class="btn-l">下载歌曲</button>
     </view>
     <view wx:else class="flex-center-Y">
             <image style="width:40rpx;height:40rpx" class="img" src="../../images/shop/downLoad.png"></image>
-            <button class="btn-l" bindtap="join">下载</button>
+            <button class="btn-l" bindtap="join">下载歌曲</button>
     </view>
 </view>
 
