--- a/pages/goodsInfo/goodsInfo.wxss
+++ b/pages/goodsInfo/goodsInfo.wxss
@@ -7,7 +7,7 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
 .share{position: absolute;right: 30rpx;z-index: 100;}
 .share image{width: 72rpx;height: 72rpx;}
 .content{position: relative;margin: 0;line-height: 1;padding-top: 20px;}
-.content .name{font-weight:32rpx;color: #333;margin-bottom: 20rpx;margin-top: 28rpx;line-height: 1.2;}
+.content .name{font-weight:32rpx;color: #333;margin-bottom: 20rpx;line-height: 1.2;}
 .content .price{font-size:36rpx;color: #333333;font-weight:bold;}
 .content .price text{font-size:24rpx;color: #999999;font-weight:400;text-decoration: line-through;margin-left: 10rpx;}
 .content .infoBox{width: 750rpx;min-height: 212rpx;background-color: #ffffff;padding: 30rpx;}
@@ -55,9 +55,11 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
   position:relative;
   height:140rpx;
   line-height:140rpx;
-  background:#f7f7f7;
-  width:690rpx;
+  background:#ffffff;
+  width:100vw;
   margin:0 auto;
+  margin-bottom: 20rpx;
+  padding:0 30rpx;
 }
 .audio_img{
   position: absolute;
