--- a/pages/homeIndex/homeIndex.wxss
+++ b/pages/homeIndex/homeIndex.wxss
@@ -265,6 +265,17 @@ swiper,
     padding: 30rpx;
     border-radius: 24rpx;
     margin-bottom: 20rpx;
+    position: relative;
+}
+
+.article .mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background: transparent;
 }
 
 .article .top {
@@ -522,10 +533,6 @@ swiper,
     justify-content: flex-start;
 }
 
-.goods image {
-    width: 100%;
-    height: 100%;
-}
 
 .goods .img {
     transform: translateY(-40rpx);
@@ -545,6 +552,16 @@ swiper,
     position: absolute;
     top: 70rpx;
     right: 40rpx
+}
+
+.goods .over{
+    width:100%;
+    height:calc(100vh - 469px);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.7);
 }
 
 .van-dropdown-item {
@@ -599,3 +616,53 @@ swiper,
 .minh2 {
     min-height: 1200rpx;
 }
+
+.search-l{
+    margin-top: 40rpx;
+    width: 100%;
+    position: relative;
+    height: 82rpx
+  }
+  .search-int{
+    width:100%;
+    height: 82rpx;
+    background: #f9f9f9;
+    border-radius: 15rpx;
+    padding-left: 80rpx;
+    font-size: 28rpx;
+    box-sizing: border-box
+  }
+  .search-int1{
+    position:absolute;
+    top:0%;
+    right:0%;
+    width:100rpx;
+    height: 82rpx;
+    background: #f9f9f9;
+    border-radius: 15rpx;
+    font-size: 28rpx;
+    box-sizing: border-box
+  }
+  .search-r{
+    font-size: 28rpx;
+    width: 60rpx;
+    height: 82rpx;
+    line-height: 82rpx;
+    color: #5a5a5a
+  }
+  .search-img1{
+    position: absolute;
+    width: 41rpx;height: 41rpx;
+    top: 50%;
+    left: 19rpx;
+    transform: translate(0,-50%)
+  }
+  .search-img2{
+    position: absolute;
+    width: 41rpx;
+    height: 41rpx;
+    top: 50%;
+    right: 19rpx;
+    transform: translate(0,-50%);
+    z-index: 999
+  }
