--- a/pages/homeIndex/homeIndex.wxss
+++ b/pages/homeIndex/homeIndex.wxss
@@ -74,7 +74,7 @@ button {
     padding: 0 30rpx;
     border-radius: 16rpx;
     overflow: hidden;
-    transform: translateY(-40rpx);
+    /* transform: translateY(-40rpx); */
 }
 
 .swiper .img {
@@ -93,41 +93,33 @@ button {
     height: 100%;
 }
 
-.shop {
-    height: 136rpx;
-    position: relative;
-    background-color: rgba(249, 249, 249, 1);
-    padding-top: 98rpx;
-}
 
-.shop .coupon {
+.coupon {
     width: 690rpx;
     height: 136rpx;
-    position: absolute;
-    top: -68rpx;
-    left: 50%;
-    transform: translateX(-50%);
     background: #ffffff;
     border-radius: 24rpx;
     padding: 24rpx 30rpx;
+    margin: 0 auto;
+    margin-top: 30rpx;
 }
 
-.shop .photo {
+.coupon .photo {
     width: 88rpx;
     height: 88rpx;
     border-radius: 50%;
     margin-right: 20rpx;
 }
 
-.shop .photo .name {
+.coupon .photo .name {
     font-size: 28rpx;
 }
 
-.shop .photo image {
+.coupon .photo image {
     border-radius: 50%;
 }
 
-.shop .couponBtn {
+.coupon .couponBtn {
     width: 180rpx;
     height: 72rpx;
     line-height: 72rpx;
@@ -137,31 +129,6 @@ button {
     color: #ffffff;
     padding: 0 20rpx;
     text-align: center;
-}
-
-.shop image {
-    width: 100%;
-}
-
-.shop .left {
-    width: 330rpx;
-    height: 100%;
-    margin-right: 30rpx;
-}
-
-.shop .right {
-    width: 330rpx;
-    height: 100%;
-}
-
-.shop .right .topBox,
-.shop .right .bottomBox {
-    width: 330rpx;
-    height: 150rpx;
-}
-
-.shop .right .topBox {
-    margin-bottom: 30rpx;
 }
 
 .caffeeImg {
@@ -556,7 +523,7 @@ swiper,
 
 .goods .over{
     width:100%;
-    height:calc(100vh - 469px);
+    height:calc(100vh - 600rpx);
     position: fixed;
     bottom: 0;
     left: 0;
@@ -565,7 +532,7 @@ swiper,
 }
 
 .van-dropdown-item {
-    top: 100rpx!important;
+    top: 590rpx!important;
 }
 
 .advBox {
@@ -665,4 +632,27 @@ swiper,
     right: 19rpx;
     transform: translate(0,-50%);
     z-index: 999
+  }
+
+  .functionBox{
+      width: 100rpx;
+      padding: 10rpx;
+      background: #ffffff;
+      box-shadow: 0 10rpx 20rpx 0 #ebe9e9;
+      position: fixed;
+      top: 60%;
+      right: 10rpx;
+      z-index: 10;
+  }
+
+  .functionBox .order{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: 40rpx 0;
+  }
+
+  .functionBox image{
+    width: 50rpx;
+    height: 50rpx;
   }
