--- a/pages/goodsInfo/goodsInfo.wxss
+++ b/pages/goodsInfo/goodsInfo.wxss
@@ -84,3 +84,41 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
   color:#90BED5;
   font-size: 10pt
 }
+
+.buyBox{
+  width: 60vw;
+  background: #ffffff;
+  z-index: 10;
+  font-size: 32rpx;
+  color: #333333;
+}
+
+.buyBox .left{
+    width: 50%;
+    height: 72rpx;
+    line-height: 72rpx;
+    font-size: 28rpx;
+    color: rgba(45, 135, 156, 1);
+    padding: 0 20rpx;
+    text-align: center;
+    border-top: 1px solid #e0dede;
+    border-right: 1px solid #e0dede;
+    margin-top: 20rpx;
+}
+.buyBox .right{
+  width: 50%;
+  height: 72rpx;
+  line-height: 72rpx;
+  font-size: 28rpx;
+  color: rgba(45, 135, 156, 1);
+  padding: 0 20rpx;
+  text-align: center;
+  border-top: 1px solid #e0dede;
+  border-right: 1px solid #e0dede;
+  margin-top: 20rpx;
+}
+
+.buyBox .title{
+  margin: 30rpx auto;
+  text-align: center;
+}
