--- a/pages/homeIndex/homeIndex.wxml
+++ b/pages/homeIndex/homeIndex.wxml
@@ -1,37 +1,14 @@
-<view class="page" style="background-image:url({{homeindexData.homeIndex}})">
-    <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" class="top-bg"></button>
-    <view wx:else class="top-bg" bindtap="toFoot">
-    </view>
-    <view class="shop container">
-        <view class="coupon flex-center-Y justify-between">
-            <view class="flex-center-Y">
-                <view class="photo">
-                    <image src="{{hasUserInfo==false ? '../../images/my/noLogin.png' : vipData.portrait}}"></image>
-                </view>
-                <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" style="font-size:28rpx">您还未登录~</button>
-                <view class="name" wx:else>
-                    {{vipData.nickName}}
-                    <view wx:if="{{vipData.gmtCreated}}" style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">{{vipData.gmtCreated}}到期</view>
-                    <view wx:else style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">您还不是会员哦~</view>
-                </view>
-            </view>
-            <button class="couponBtn" wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" style="font-size:28rpx;margin:0">去登录</button>
-            <view wx:else>
-                <view wx:if="{{vipData.gmtCreated}}" class="couponBtn" bindtap="toVip">续费会员</view>
-                <view wx:else class="couponBtn" bindtap="toVip">开通会员</view>
-            </view>
+<view class="page">
+    <view class="functionBox">
+        <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" class="order" style="line-height:0">
+            <image src="../../images/tab/order.png"></image>
+        </button>
+        <view wx:else bindtap="getUserProfile" class="order" bindtap="toOrder">
+            <image src="../../images/tab/order.png"></image>
         </view>
-        <view class="left" bindtap="toShop">
-            <image src="../../images/shop/shop.png"></image>
-        </view>
-        <view class="right">
-            <view class="topBox" bindtap="topackage">
-                <image src="../../images/shop/package.png"></image>
-            </view>
-            <view class="bottomBox" bindtap="toMachine">
-                <image src="../../images/shop/machine.png"></image>
-            </view>
-        </view>
+        <button open-type="contact" class="order" style="line-height:0">
+            <image src="../../images/tab/kf.png"></image>
+        </button>
     </view>
     <view class="swiper">
         <swiper autoplay="true" interval="5000" duration="500" circular="true" indicator-color="rgba(255, 255, 255, 0.5)" indicator-active-color="#fff" bindchange="swiperChange">
@@ -49,13 +26,31 @@
         </view>
         <!-- 自定义小圆点样式 -->
     </view>
-    <view class="flex-center-Y" style="padding-top:30rpx;background-color: rgba(249, 249, 249, 1);transform:translateY(-40rpx)">
+    <view class="coupon flex-center-Y justify-between">
+        <view class="flex-center-Y">
+                <view class="photo">
+                    <image src="{{hasUserInfo==false ? '../../images/my/noLogin.png' : vipData.portrait}}"></image>
+                </view>
+                <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" style="font-size:28rpx">您还未登录~</button>
+                <view class="name" wx:else>
+                    {{vipData.nickName}}
+                    <view wx:if="{{vipData.gmtCreated}}" style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">{{vipData.gmtCreated}}到期</view>
+                    <view wx:else style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">您还不是会员哦~</view>
+                </view>
+        </view>
+        <button class="couponBtn" wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" style="font-size:28rpx;margin:0">去登录</button>
+        <view wx:else>
+                <view wx:if="{{vipData.gmtCreated}}" class="couponBtn" bindtap="toVip">续费会员</view>
+                <view wx:else class="couponBtn" bindtap="toVip">开通会员</view>
+        </view>
+    </view>
+    <view class="flex-center-Y" style="padding-top:30rpx;background-color: rgba(249, 249, 249, 1);">
         <view class="goods">
             <view class="over" wx:if="{{showSearch}}"></view>
-            <van-popup show="{{ showSearch }}" position="top" custom-style="height: 264rpx;top:120rpx" overlay-style="background:transparent" bind:close="search" >
+            <van-popup show="{{ showSearch }}" position="top" custom-style="height: 264rpx;top:590rpx" overlay-style="background:transparent" bind:close="search" >
                 <view class="searchBox">
                     <view class="search-l">
-                        <input placeholder="搜索歌曲名称" class="search-int" value="{{inputValue}}" bindinput="getSearch"></input>
+                        <input placeholder="搜索歌曲名称" class="search-int" value="{{inputValue}}" bindinput="getInput"></input>
                         <image class="search-img1" src="../../images/homeIndex/search.png"></image>
                         <image class="search-img2" src="../../images/homeIndex/clear.png" catchtap="clear"></image>
                         <view class="search-int1" catchtap="clear"></view>
@@ -68,12 +63,12 @@
             <view class="tabs">
                 <view class="left">
                     <van-dropdown-menu active-color="#2d879c">
-                        <van-dropdown-item value="{{ typeId }}" options="{{ typeList }}" />
-                        <van-dropdown-item value="{{ value2 }}" options="{{ option2 }}" />
+                        <van-dropdown-item value="{{ typeId }}" options="{{ typeList }}" bindchange="getTypeId"/>
+                        <van-dropdown-item value="{{ value2 }}" options="{{ option2 }}"  bindchange="getFeeType"/>
                     </van-dropdown-menu>
                 </view>
             </view>
-            <scroll-view scroll-y="true" class="container" style="width:680rpx;height: calc(100vh - 1000rpx);overflow: scroll;" bindscrolltolower="bindscrolltolower">
+            <scroll-view scroll-y="true" class="container" style="width:680rpx;height: calc(100vh - 660rpx);overflow: scroll;" bindscrolltolower="bindscrolltolower">
                 <view wx:for="{{goodsList}}" wx:key="index" class="article content">
                     <button class="mask" wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile"></button>
                     <view class="bottom" bindtap="toDetail" data-skucode="{{item.skuCode}}">
