--- a/pages/homeIndex/homeIndex.wxml
+++ b/pages/homeIndex/homeIndex.wxml
@@ -33,7 +33,7 @@
                 </view>
                 <button wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile" style="font-size:28rpx">您还未登录~</button>
                 <view class="name" wx:else>
-                    {{vipData.nickName}}
+                    {{vipData.nickName}} <text style="font-size:24rpx;color:#eab234">{{vipData.memberGrade==1000 ? '' : vipData.gradeName}}</text>
                     <view wx:if="{{vipData.memberGrade==1000}}" style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">开通会员,享更多权益~</view>
                     <view wx:else style="margin-top:10rpx;color:rgba(45, 135, 156, 1);font-size:24rpx">{{vipData.gmtCreated}}到期</view>
                 </view>
